Fixed the alignment of the footer text

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
   --btn-color: #7d3505;
-  --box-shadow: inset 0 0 0 0 #7d3505;
+  --box-shadow: inset 0 0 0 0 rgba(104, 44, 4, 0.73);
   --button-color: #7d3505;
-  --box-shadow-hover: inset 300px 0 0 0 #7d3505;
+  --box-shadow-hover: inset 300px 0 0 0 rgba(125, 53, 5, 0.73);
 }
 
 * {
@@ -19,8 +19,8 @@ body {
   min-height: 100vh;
   font-family: "Poppins", sans-serif;
   background-image: linear-gradient(
-      rgba(125, 53, 0, 0.73),
-      rgba(125, 53, 5, 0.73)
+      rgba(125, 53, 5, 0.43),
+      rgba(125, 53, 5, 0.43)
     ),
     url(./background.webp);
   transition: 2s background-image ease-in-out;
@@ -32,14 +32,14 @@ body {
 
 .body-dark{
   background-image: linear-gradient(
-      rgba(0, 0, 0, 0.73),
-      rgba(0, 0, 0, 0.73)
+      rgba(125, 53, 5, 0.73),
+      rgba(125, 53, 5, 0.73)
     ),
     url(./background.webp);
-    --button-color: black;
+    --button-color: rgba(125, 53, 5, 0.73);
     --btn-color: orange;
-    --box-shadow: inset 0 0 0 0 #000000;
-    --box-shadow-hover: inset 300px 0 0 0 #000000;
+    --box-shadow: inset 0 0 0 0 rgba(125, 53, 5, 0.73);
+    --box-shadow-hover: inset 300px 0 0 0 rgba(125, 53, 5, 0.73);
 }
 
 .navbar {
@@ -67,7 +67,7 @@ body {
 
 .container {
   text-align: center;
-  margin: 14em auto;
+  margin-block-start: 14em;
 }
 
 .container__title {
@@ -86,13 +86,14 @@ body {
 }
 
 .container__button {
-  background-color: white;
   border-radius: 2em;
   padding-inline: 3em;
   padding-block: 1em;
   font-size: 0.9rem;
   font-family: "Poppins";
   text-align: center;
+  border: none;
+  outline: none;
   font-weight: 600;
   color: var(--button-color);
   transition: box-shadow ease-out 0.3s;
@@ -115,12 +116,23 @@ body {
 .container__button:hover {
  box-shadow: var(--box-shadow-hover);
  color: white;
+   border: none;
+  outline: none;
 }
 
 .navbar__title:hover {
   -webkit-text-stroke: 0.02em white;
   color: transparent;
 }
+
+footer{
+  text-align: center;
+  position: absolute;
+  bottom: 2em;
+  animation: moveUpButton 2s ease-in-out;
+  margin-inline-start: 2em;
+}
+
 
 @keyframes moveUpTitle {
   0% {
